--- a/reasoningtricks.json
+++ b/reasoningtricks.json
@@ -1,8 +1,8 @@
 {
   "Data": [
     {
-      "Title": "कर्क रेखा पर स्थित भारत के राज्य",
-      "Link": "https://awesometricksforgklatestandupdated.blogspot.com/2025/09/blog-post.html"
+      "Title": "संख्या श्रृंखला — फौरन चेक करने की सूची",
+      "Link": "https://awesometricksforgklatestandupdated.blogspot.com/2025/09/blog-post_9.html"
     }
   ]
 }
